# dragon-eye

./: .gitmodules  CMakeLists.txt  LICENSE  README.H265_RTP.txt  README.RTP  README.SETUP.txt  README.WIFI.txt  README.md  changelog.txt  dragon-eye setup notes.odt  dragon-eye.cpp  hls.sh  install.sh  longan.txt  multicast-recv.py  nvarguscamerasrc.txt  rtp.sdp  setup.sh  test-launch.c
debian/: Makefile
debian/repack/DEBIAN/: control  preinst
etc/NetworkManager/: NetworkManager.conf
etc/NetworkManager/system-connections/: F3F-AP-AC
etc/dragon-eye/: camera.config  dragon-eye.config  index.html  system.config  udpsink.host
etc/samba/: smb.conf
etc/systemctl/system/: dragon-eye.service
etc/systemd/system/: dragon-eye.service  hls.service  rtwap.service
etc/udev/rules.d/: 10-network-device.rules
